# Hoptics

./: Hoptics.cabal  Makefile  README.md  stack.yaml
src/: Hoptics.hs  Optics.hs  Parsers.hs
